--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,9 +10,9 @@
       </div>
       <button class="button button-block button-positive" ng-click="login()">Ingresa</button>
          
-        <p style="text-align:center">O bien</p>
+        <p style="text-align:center">O <a class="crear-cuenta" href="#/signup">crea tu cuenta</a></p>
                   
-        <button class="button button-block button-positive" ng-click="login()">Crea tu cuenta</button>
+        <!-- <button class="button button-block button-positive" ng-click="login()">Crea tu cuenta</button> -->
         
         <p style="text-align:center; margin-top:40px">También puedes</p>
         
